about.css
.title {
    text-align: center;
}

.personal h3 {
    text-align: center;
}

.about {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 200px;
}

.about img {
    width: 400px;
    height: 400px;
    float: right;
    border-radius: 100%;
}

.personal {
    background-color: #1b1b1b;
    border-radius: 20px;
    padding: 20px;
    height: fit-content;
    width: fit-content;
    display: flex;
    border: 1px solid white;
}

.hobbies {
    background-color: #1b1b1b;
    border-radius: 10px;
    padding: 10px;
    width: fit-content;
    text-align: center;
    border: 1px solid white;
}

.hobbies h3 {
    text-align: center;
}

.personal_title {
    transition-delay: 200ms;
}

.text_personal {
    transition-delay: 400ms;
}

.headshot.hidden {
    transform: translateX(100%)
}

.headshot.show {
    transform: translateX(0);
}

.right_side.hidden {
    transform: translateX(100%);
}

.right_side.show {
    transform: translateX(0);
}

.hobb:nth-child(2) {
    transition-delay: 100ms
}

.hobb:nth-child(3) {
    transition-delay: 200ms
}

.hobb:nth-child(4) {
    transition-delay: 300ms
}

.hobb:nth-child(5) {
    transition-delay: 400ms
}

